Fixed author homepage url

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Mohamed Alsharaf",
             "email": "mohamed.alsharaf@gmail.com",
-            "homepage": "my.geek.nz",
+            "homepage": "http://my.geek.nz",
             "role": "Developer"
         }
     ],
