--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - hhvm 
 
 before_script:
   - composer install --dev --prefer-source
+  - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 script: phpunit -c app
 
