--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": ">=5.3.3",
         "silex/silex": "~1.1",
         "monolog/monolog": "~1.6",
+        "symfony/monolog-bridge": "~2.5",
         "symfony/twig-bridge": "~2.3",
         "symfony/validator": "~2.3",
         "twig/twig": "~1.10",
@@ -28,7 +29,8 @@
         "symfony/yaml": "~2.3",
         "symfony/browser-kit": ">=2.3",
         "swiftmailer/swiftmailer": ">=4.1.2",
-        "suncat/php-mobile-detect": ">=v2.0.9"
+        "suncat/php-mobile-detect": ">=v2.0.9",
+        "silex/web-profiler": "~1.0"
     },
     "autoload": {
         "psr-0": {
