--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,20 @@
         "symfony/browser-kit": ">=2.3",
         "swiftmailer/swiftmailer": ">=4.1.2",
         "suncat/php-mobile-detect": ">=v2.0.9",
-        "silex/web-profiler": "~1.0"
+        "silex/web-profiler": "~1.0",
+        "behat/behat": "~2.4",
+        "behat/mink": "~1.4",
+        "behat/mink-extension": "~1.0",
+        "behat/mink-goutte-driver": "~1.0",
+        "behat/mink-selenium2-driver": "~1.0"
     },
     "autoload": {
         "psr-0": {
             "Moo\\": "src/",
             "MyApp\\": "src/"
         }
+    },
+    "config": {
+        "bin-dir": "bin/"
     }
 }
