--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,16 @@
         "php": ">=5.3.3",
         "silex/silex": "~1.1",
         "monolog/monolog": "~1.6",
-        "symfony/monolog-bridge": "~2.5",
-        "symfony/twig-bridge": "~2.3",
-        "symfony/validator": "~2.3",
+        "symfony/monolog-bridge": "2.5.2",
+        "symfony/twig-bridge": "2.5.2",
         "twig/twig": "~1.10",
-        "symfony/intl": ">=2.3",
-        "symfony/form": "~2.3",
-        "symfony/validator": "~2.3",
-        "symfony/translation": "~2.3",
-        "symfony/config": "~2.3",
-        "symfony/yaml": "~2.3",
-        "symfony/browser-kit": ">=2.3",
+        "symfony/intl": "2.5.2",
+        "symfony/form": "2.5.2",
+        "symfony/validator": "2.5.2",
+        "symfony/translation": "2.5.2",
+        "symfony/config": "2.5.2",
+        "symfony/yaml": "2.5.2",
+        "symfony/browser-kit": "2.5.2",
         "swiftmailer/swiftmailer": ">=4.1.2",
         "suncat/php-mobile-detect": ">=v2.0.9",
         "silex/web-profiler": "~1.0",
