--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
@@ -9,6 +8,12 @@ php:
 before_script:
   - composer install --dev --prefer-source
   - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  - "sh -e /etc/init.d/xvfb start"
+  - "export DISPLAY=:99.0"
+  - "(php -S localhost:8000 -t web &) 2> /dev/null > /dev/null"
+  - "wget http://selenium-release.storage.googleapis.com/2.42/selenium-server-standalone-2.42.2.jar"
+  - "(java -jar selenium-server-standalone-2.42.2.jar &) 2> /dev/null > /dev/null"
+  - sleep 5
 
-script: phpunit -c app
+script: phpunit -c app && bin/behat --config src/MyApp/behat.yml -v
 
