--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "silex/web-profiler": "~1.0",
         "behat/behat": "~2.4",
         "behat/mink": "~1.4",
-        "behat/mink-extension": "~1.0",
+        "behat/mink-extension": "1.0",
         "behat/mink-goutte-driver": "~1.0",
         "behat/mink-selenium2-driver": "~1.0"
     },
